@@ -1024,7 +1024,7 @@ class SvnRepository(Repository):
                         if paths[p][0] in ('R', 'D'):
                             del created_branches[p]
                             j = self._log.find_latest_change(p, i-1, 
-                                recurse=True)
+                                include_parents=True, include_children=True)
                             ret.append((p, j, False))
 
                         if paths[p][0] in ('A', 'R'): 
@@ -1037,7 +1037,8 @@ class SvnRepository(Repository):
                                 if c.startswith(p+"/"):
                                     del created_branches[c] 
                                     j = self._log.find_latest_change(c, i-1, 
-                                            recurse=True)
+                                            include_parents=True, 
+                                            include_children=True)
                                     ret.append((c, j, False))
                         if paths[p][0] in ('A', 'R'):
                             parents = [p]
@@ -1054,7 +1055,9 @@ class SvnRepository(Repository):
             pb.finished()
 
         for p in created_branches:
-            j = self._log.find_latest_change(p, revnum, recurse=True)
+            j = self._log.find_latest_change(p, revnum, 
+                                             include_parents=True,
+                                             include_children=True)
             if j is None:
                 j = created_branches[p]
             ret.append((p, j, True))
