@@ -166,7 +166,7 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(0, walker.find_latest_change("", 1))
+        self.assertEqual(0, walker.find_latest_change("", 1, include_parents=True))
 
     def test_find_latest_parent(self):
         repos_url = self.make_client("a", "dc")
@@ -179,7 +179,8 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(2, walker.find_latest_change("tags/tmp/foo", 2))
+        self.assertEqual(2, walker.find_latest_change("tags/tmp/foo", 2, 
+                                                      include_parents=True))
 
     def test_find_latest_parent_just_modify(self):
         repos_url = self.make_client("a", "dc")
@@ -194,7 +195,8 @@ class TestLogWalker(TestCaseWithSubversionRepository):
         self.client_commit("dc", "My Message3")
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
-        self.assertEqual(2, walker.find_latest_change("tags/tmp/foo", 3))
+        self.assertEqual(2, walker.find_latest_change("tags/tmp/foo", 3,
+                                                      include_parents=True))
 
     def test_find_latest_parentmoved(self):
         repos_url = self.make_client("a", "dc")
@@ -207,7 +209,8 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertIs(2, walker.find_latest_change("bla/tmp", 2))
+        self.assertIs(2, walker.find_latest_change("bla/tmp", 2, 
+                                                   include_parents=True))
 
     def test_find_latest_nonexistant(self):
         repos_url = self.make_client("a", "dc")
@@ -220,8 +223,8 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertIs(None, walker.find_latest_change("bloe", 2))
-        self.assertIs(None, walker.find_latest_change("bloe/bla", 2))
+        self.assertIs(None, walker.find_latest_change("bloe", 2, include_parents=True))
+        self.assertIs(None, walker.find_latest_change("bloe/bla", 2, include_parents=True))
 
     def test_find_latest_change(self):
         repos_url = self.make_client("a", "dc")
@@ -231,7 +234,7 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(1, walker.find_latest_change("branches", 1))
+        self.assertEqual(1, walker.find_latest_change("branches", 1, include_parents=True))
 
     def test_find_latest_change_children(self):
         repos_url = self.make_client("a", "dc")
@@ -244,7 +247,7 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(1, walker.find_latest_change("branches", 2))
+        self.assertEqual(1, walker.find_latest_change("branches", 2, include_parents=True))
 
     def test_find_latest_change_prop(self):
         repos_url = self.make_client("a", "dc")
@@ -259,7 +262,7 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(2, walker.find_latest_change("branches", 3))
+        self.assertEqual(2, walker.find_latest_change("branches", 3, include_parents=True))
 
     def test_find_latest_change_file(self):
         repos_url = self.make_client("a", "dc")
@@ -274,7 +277,7 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(3, walker.find_latest_change("branches/foo", 3))
+        self.assertEqual(3, walker.find_latest_change("branches/foo", 3, include_parents=True))
 
     def test_find_latest_change_newer(self):
         repos_url = self.make_client("a", "dc")
@@ -289,7 +292,7 @@ class TestLogWalker(TestCaseWithSubversionRepository):
 
         walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
 
-        self.assertEqual(2, walker.find_latest_change("branches/foo", 2))
+        self.assertEqual(2, walker.find_latest_change("branches/foo", 2, include_parents=True))
 
     def test_follow_history_branch_replace(self):
         repos_url = self.make_client("a", "dc")
